fragment_second.xml layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,6 @@
     </string>
     <string name="tv_programme_for_today">TV programme for today</string>
     <string name="title">title</string>
+    <string name="share">Share</string>
+    <string name="details">Details</string>
 </resources>
