--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="title">title</string>
     <string name="share">Share</string>
     <string name="details">Details</string>
+    <string name="change_theme">Change theme</string>
 </resources>
