--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="share">Share</string>
     <string name="details">Details</string>
     <string name="change_theme">Change theme</string>
+    <string name="search">Search</string>
 </resources>
