--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="details">Details</string>
     <string name="change_theme">Change theme</string>
     <string name="search">Search</string>
+    <string name="retry">Retry</string>
 </resources>
